@@ -451,6 +451,8 @@ int test_unop(Shell_t *shp,register int op,register const char *arg)
 		}
 		if(ap = nv_arrayptr(np))
 			return(nv_arrayisset(np,ap));
+		if(*arg=='I' && strcmp(arg,"IFS")==0)
+			return(nv_getval(np)!=NULL);  /* avoid BUG_IFSISSET */
 		return(!nv_isnull(np) || nv_isattr(np,NV_INTEGER));
 	    }
 	    default:
